# statsh

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Makefile  config.c  config.h  cpu_stats.c  cpu_stats.h  disk_stats.c  disk_stats.h  interrupts.c  interrupts.h  main.c  mem_stats.c  mem_stats.h  net_stats.c  net_stats.h  signals.c  signals.h  statsh.1
